--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-treebeard": "^2.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
@@ -94,7 +95,7 @@
       "react-app"
     ]
   },
- "homepage": "." ,
+  "homepage": ".",
   "eslintConfig": {
     "extends": "react-app"
   }
